fixed navbar button alignment

--- a/react-web-app/src/components/Navbar.css
+++ b/react-web-app/src/components/Navbar.css
@@ -19,4 +19,5 @@
     border: none;
     border-radius: 0.5em;
     cursor: pointer;
+    vertical-align: middle ;
 }
